--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Visualize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
 		<title>Visualize by TEMPLATED</title>
@@ -21,10 +17,7 @@
 						<span class="avatar"><img src="images/zshehab.jpg" alt="" /></span>
 						<h1>I’m not a Photographer <br> I’m an Adventurous Spirit who is always seeking to embrace the world's beauty.</h1>
 						<ul class="icons">
-							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+							<li><a href="https://www.instagram.com/shehabza/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
@@ -37,245 +30,66 @@
 								<div>
 									<a href="images2/fulls/image1.png">
 										<img src="images2/thumbs/image1.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Near LakeShore Loyola Campus BW</h3>
 									</a>
 									<a href="images2/fulls/image2.png">
 										<img src="images2/thumbs/image2.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>The Magnificent Bean</h3>
+									</a>
+									<a href="images2/fulls/image3.png">
+										<img src="images2/thumbs/image3.jpg" alt="" />
+										<h3>Work Outing</h3>
 									</a>
 								</div>
 								<div>
-									<a href="images2/fulls/image3.png">
-										<img src="images2/thumbs/image3.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
 									<a href="images2/fulls/image4.png">
 										<img src="images2/thumbs/image4.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Spring In The Air </h3>
 									</a>
 									<a href="images2/fulls/image5.png">
 										<img src="images2/thumbs/image5.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>The Colors are so Vibrant</h3>
 									</a>
-								</div>
-								<div>
 									<a href="images2/fulls/image6.png">
 										<img src="images2/thumbs/image6.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>The Rain Is So Calming</h3>
 									</a>
 									<a href="images2/fulls/image7.png">
 										<img src="images2/thumbs/image7.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>At the Chicago Botanical</h3>
 									</a>
 								</div>
+							
 								<div>
 									<a href="images2/fulls/image8.png">
 										<img src="images2/thumbs/image8.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Loyola LakeShore Campus</h3>
 									</a>
 									<a href="images2/fulls/image9.png">
 										<img src="images2/thumbs/image9.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Concert in the Garden </h3>
+									</a>
+									<a href="images2/fulls/image10.png">
+										<img src="images2/thumbs/image10.jpg" alt="" />
+										<h3>Baseball Stadium</h3>
 									</a>
 								</div>
 								<div>
-									<a href="images2/fulls/image10.png">
-										<img src="images2/thumbs/image10.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
 									<a href="images2/fulls/image11.png">
 										<img src="images2/thumbs/image11.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Magnificent Campus BW</h3>
 									</a>
 									<a href="images2/fulls/image12.png">
 										<img src="images2/thumbs/image12.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Cherry Blossoms</h3>
 									</a>
-								</div>
-								<div>
 									<a href="images2/fulls/image13.png">
 										<img src="images2/thumbs/image13.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>Nature</h3>
 									</a>
 									<a href="images2/fulls/image14.png">
 										<img src="images2/thumbs/image14.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-							</section>
-							<section class="thumbnails">
-								<div>
-									<a href="images/fulls/01.jpg">
-										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/06.jpg">
-										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/07.jpg">
-										<img src="images/thumbs/07.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/01.jpg">
-										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/06.jpg">
-										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/07.jpg">
-										<img src="images/thumbs/07.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-							</section>
-							<section class="thumbnails">
-								<div>
-									<a href="images/fulls/01.jpg">
-										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/06.jpg">
-										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/07.jpg">
-										<img src="images/thumbs/07.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/01.jpg">
-										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/06.jpg">
-										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/07.jpg">
-										<img src="images/thumbs/07.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-							</section>
-							<section class="thumbnails">
-								<div>
-									<a href="images/fulls/01.jpg">
-										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/06.jpg">
-										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
-									</a>
-									<a href="images/fulls/07.jpg">
-										<img src="images/thumbs/07.jpg" alt="" />
-										<h3>Lorem ipsum dolor sit amet</h3>
+										<h3>The View From Wacker</h3>
 									</a>
 								</div>
 							</section>
