--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <html>
 	<head>
-		<title>Visualize by TEMPLATED</title>
+		<title>Zahra Shehab | Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 
