added the mailto function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<h1>I’m not a Photographer <br> I’m an Adventurous Spirit who is always seeking to embrace the world's beauty.</h1>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/shehabza/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="mailto:info@juanvaca.com?Subject=I%20Like%20Your%20Portfolio" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
@@ -40,6 +40,10 @@
 									<a href="images2/fulls/image3.png">
 										<img src="images2/thumbs/image3.jpg" alt="" />
 										<h3>Work Outing</h3>
+									</a>
+									<a href="images2/fulls/image15.png">
+										<img src="images2/thumbs/image15.jpg" alt="" />
+										<h3>Work Break</h3>
 									</a>
 								</div>
 								<div>
@@ -73,6 +77,10 @@
 									<a href="images2/fulls/image10.png">
 										<img src="images2/thumbs/image10.jpg" alt="" />
 										<h3>Baseball Stadium</h3>
+									</a>
+									<a href="images2/fulls/image16.png">
+										<img src="images2/thumbs/image16.jpg" alt="" />
+										<h3>Parks in the City</h3>
 									</a>
 								</div>
 								<div>
